# Algorithms-Datastructures

./: A1.c  A2.c  A3.c  A4.c  A5.c  A6.c  A7.c  LogBook  Log_With_The_Exercise  Log_With_The_Exercise.txt  README.md  main.c
WEEK 5/: LogBook5
WEEK13/: LOOGBOOK13  heap_tester.cpp  heap_tester.h  main.cpp  maxheap.cpp  maxheap.h
WEEK1Folder/: A10.c  A3.c  A4.c  A5.c  A6.c  A7.c  A8.c  A9.c
WEEK2Folder/: A1  A2.c  A3.c  A4.c  A5.c  LogBook
WEEK2Folder/W2 Algorithms and Data Structures/: Week 2 Dynamic Arrays(1).md
WEEK2Folder/W2 Algorithms and Data Structures/week2-code/ads_week2/: CMakeLists.txt  LogBookWeek2.md  array.c  array.h  easy_input.c  easy_input.h  main.c  test_array.c  test_array.h
WEEK3Folder/: A1.c  Week 3 Linked List.md  Week 3_Workbook.md  me_last_night
WEEK8/: LOGBOOK 8
Week_4/: Workbook4
